Support proxy settings

--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,9 @@
 ; Add ambient background. If you are having performance issue, set to false to disable.
 ambient = true
+
+; Uncomment the following lines to enable proxy 
+; [proxy]
+; host = localhost
+; port = 8888
+; username = 
+; password = 
