Added notification, minimize to tray and ap/rp trackers

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,8 @@
-; Add ambient background. If you are having performance issue, set to false to disable.
+; Add ambient background. If you are having performance issue, set to false to disable
 ambient = true
+
+; Minimize to tray. You can disable this behaviour by setting the following to false
+minimizeToTray = true
 
 ; Uncomment the following lines to enable proxy 
 ; [proxy]
