Add erolabs url selector

--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,8 @@
 ; Add ambient background. If you are having performance issue, set to false to disable
 ambient = true
 
-; Minimize to tray. You can disable this behaviour by setting the following to false
-minimizeToTray = true
+; Enable tray. Click the tray to hide or show the game window
+tray = true
 
 ; Uncomment the following lines to enable proxy 
 ; [proxy]
