--- a/config.ini
+++ b/config.ini
@@ -4,6 +4,9 @@ ambient = true
 ; Enable tray. Click the tray to hide or show the game window
 tray = true
 
+; Set to true if you want to disable caching
+nocache = false
+
 ; Uncomment the following lines to enable proxy 
 ; [proxy]
 ; host = localhost
